--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
-  <link rel="stylesheet" href="/public/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
@@ -15,15 +15,22 @@
         <a href="/">Tech Blog</a>
         </h1>
         <nav>
+          <a href="/">Home</a>
+          <a href="/dashboard">Dashboard</a>
+          {{#if loggedIn}}
             <button id="logout" class="btn-no-style">logout</button>
-            <a href="/login">login</a>
+            {{else}}
+              <a href="/login">login</a>
+          {{/if}}
         </nav>
     </header>
     <main>
       {{{ body }}}
     </main>
   </div>
+  {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
