--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,12 +1,12 @@
 <ol class="post-list">
   {{#each posts as |post|}}
     <li>
-    <article class="post">
-      <div class="title">
+    <article class="card">
+      <div class="card-header rounded-0">
         <h2>{{post.title}}</h2>
-        <h2>Posted by {{post.user.username}}, {{post.created_at}}</h2>
+        <h3>Posted by {{post.user.username}}, {{post.created_at}}</h3>
       </div>
-      <div class="meta">
+      <div class="card-body">
           <p>{{post.post_content}}</p>
       </div>
     </article>
