--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,13 @@
-<ol class="post-list">
+<section>
   {{#each posts as |post|}}
-    <li>
-    <article class="post">
-      <div class="title">
+    <article class="card">
+      <div class="card-header rounded-0">
         <a href="/post/{{post.id}}"><h2>{{post.title}}</h2></a>
-        <h2>Posted by {{post.user.username}}, {{post.created_at}}</h2>
+        <h3>Posted by {{post.user.username}}, {{post.created_at}}</h3>
       </div>
-      <div class="meta">
+      <div class="card-body">
           <p>{{post.post_content}}</p>
       </div>
     </article>
-  </li>
   {{/each}}
-</ol>
+</section>
