--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,25 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
+  <title>The Tech Blog</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-        <h1>
-        <a href="/">Tech Blog</a>
-        </h1>
         <nav>
           <a href="/">Home</a>
-          <a href="/dashboard">Dashboard</a>
           {{#if loggedIn}}
-            <button id="logout" class="btn-no-style">logout</button>
+            <a href="/dashboard">Dashboard</a>
+            <a id="logout" class="btn-no-style">Logout</a>
             {{else}}
-              <a href="/login">login</a>
+              <a href="/login">Login</a>
           {{/if}}
         </nav>
+        <h1>
+        <a href="/">The Tech Blog</a>
+        </h1>
     </header>
     <main>
       {{{ body }}}
