--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -19,7 +19,7 @@
                 </div>
 
                 <div>
-                <button id="comment-btn" type="submit">Submit</button>
+                <button class="btn" type="submit">Submit!</button>
                 </div>
             </form>
         </div>
