--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 :root {
     --main-bg-color: rgb(181, 209, 193);
     --accent-color: rgb(26, 11, 11);
+    --hover-color: rgb(87, 71, 71);
 }
 
 header {
@@ -51,7 +52,7 @@ body {
     border: solid var(--accent-color);
 }
 
-.card-header {
+.card-header, .list-group-item {
     background-color: var(--accent-color);
     color: var(--main-bg-color);
     border-radius: none;
@@ -59,7 +60,7 @@ body {
     justify-content: space-between;
 }
 
-.card-header h2 {
+.card-header h2, .card-header h3 {
     color: var(--main-bg-color);
 }
 
@@ -73,7 +74,7 @@ textarea {
     height: 5rem; 
 }
 
-#comment-btn {
+.btn {
     width: 100%;
     background-color: var(--accent-color);
     color: var(--main-bg-color);
@@ -84,4 +85,27 @@ textarea {
 
 h3 {
     font-size: 15px;
+}
+
+#new-post-btn {
+    background-color: var(--accent-color);
+    color: var(--main-bg-color);
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 20px;
+    width: 20%;
+    margin: auto;
+    display: block;
+    text-align: center;
+}
+
+.btn:hover, .post-list:hover {
+    background-color: var(--hover-color);
+}
+
+input {
+    display: block;
+    width: 100%;
+    height: 3rem;
+    margin: 1rem auto;
 }
