--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,21 @@
-<form class="login-form">
-  <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
+<div class="card">
+  <div class="card-header rounded-0">Login</div>
+  <div class="card-body">
+    <form class="login-form">
+      <div>
+        <label for="username">Username</label>
+        <input type="text" id="username" />
+      </div>
+      <div>
+        <label for="password-login">Password</label>
+        <input type="password" id="password-login" />
+      </div>
+      <div>
+        <button class="btn" type="submit">Login!</button>
+      </div>
+    </form>
+    <a href="/signup">Sign Up Instead</a>
   </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
-
-<form class="signup-form">
-  <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
-  </div>
-  <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
+</div>
 
 <script src="/javascript/login.js"></script>
