--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 <section>
   {{#each posts as |post|}}
     <article class="card">
-      <div class="card-header rounded-0 post-list">
-        <a href="/post/{{post.id}}">
-          <h2>{{post.title}}</h2>
-          <h3>Posted by {{post.user.username}} on {{post.created_at}}</h3>
-        </a>
-      </div>
+      <a href="/post/{{post.id}}">
+        <div class="card-header rounded-0 post-list">
+            <h2>{{post.title}}</h2>
+            <h3>Posted by {{post.user.username}} on {{format_date post.created_at}}</h3>
+        </div>
+      </a>
       <div class="card-body">
           <p>{{post.post_content}}</p>
       </div>
