fixes login and routing issues

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,7 +11,7 @@
             <input type="password" id="password-signup" />
         </div>
         <div>
-            <button class="btn" type="submit">signup</button>
+            <button class="btn" type="submit">Sign Up!</button>
         </div>
         </form>
         <a href="/login">Login Instead</a>
