--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,6 +81,7 @@ textarea {
     padding: 10px;
     font-size: 20px;
     border-radius: 10px;
+    margin: 1rem 0;
 }
 
 h3 {
@@ -94,7 +95,7 @@ h3 {
     border-radius: 5px;
     font-size: 20px;
     width: 20%;
-    margin: auto;
+    margin: 1rem auto;
     display: block;
     text-align: center;
 }
@@ -109,4 +110,8 @@ input {
     width: 100%;
     height: 3rem;
     margin: 1rem auto;
+}
+
+.list-group-item {
+    margin: 1rem;
 }
