--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-      <button type="submit">Post</button>
+      <button class="btn" type="submit">Post</button>
     </div>
 </form>
 
